<resources>
    <string name="app_name">PolyGo</string>
    <string name="button">Button</string>
    <string name="search">Поиск</string>
    <string name="seve_to_the_bookmarks_text">Сохраняйте в закладки всё что вам нужно в Политехе.</string>
    <string name="radar_desription">Радар позволяет узнать что находится в любом здании или вокруг него.</string>
    <string name="campus_map">Карта кампуса</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_in_bookmarks">Поиск в закладках</string>
    <string name="search_people">Люди</string>
    <string name="search_all">Все</string>
    <string name="search_places">Места</string>
    <string name="near">Рядом</string>
    <string name="no_near_objects">Поблизости нет зданий</string>
    <string name="title_activity_radar">RadarActivity</string>
    <string name="title_ar">Ar Module</string>
    <string name="title_arr">Module Title</string>
    <string name="title_core_arr">Module Title</string>
    <string name="bookmarks">Закладки</string>
    <string name="title_buildsrc">Module Title</string>
</resources>