<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:text="ДОБРОЕ УТРО" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:textColor="@color/black"
            tools:text="17.02 - Четная неделя" />

        <androidx.cardview.widget.CardView
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:foreground="?attr/selectableItemBackground">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/dark_green_gradient" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/pt_mono"
                android:text="@string/search"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="monospace" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="32dp"
                android:layout_weight="3"
                android:text="@string/seve_to_the_bookmarks_text" />

            <androidx.cardview.widget.CardView
                android:id="@+id/bookmarkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_bookmark" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/radarButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/radar_img" />


            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_weight="3"
                android:text="@string/radar_desription" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/mapButton"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="60dp"
            android:foreground="?attr/selectableItemBackground">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/dark_green_gradient" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/pt_mono"
                android:text="@string/campus_map"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="monospace" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</FrameLayout>