<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/pt_mono"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/mineShaft"
            android:layout_marginBottom="32dp"
            tools:text="Закладки" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:cardCornerRadius="16dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/softGreen" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="24sp"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@null" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/pt_mono"
            android:textStyle="normal"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@color/mineShaft"
            android:text="@string/search_in_bookmarks" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/dark_green_gradient" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="normal"
                    android:textSize="16sp"
                    android:fontFamily="@font/pt_mono"
                    android:layout_gravity="center"
                    android:text="@string/search_people" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="30dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/dark_green_gradient" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="normal"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/pt_mono"
                    android:text="@string/search_all" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="30dp"
                android:layout_marginStart="8dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/dark_green_gradient" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textStyle="normal"
                    android:textSize="16sp"
                    android:fontFamily="@font/pt_mono"
                    android:text="@string/search_places" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/itemsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_bookmark" />

    </LinearLayout>


</FrameLayout>